--- a/padre-ginos/package.json
+++ b/padre-ginos/package.json
@@ -2,7 +2,11 @@
   "name": "padre-ginos",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,css}\"",
     "lint": "eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
