--- a/padre-ginos/package.json
+++ b/padre-ginos/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,css}\"",
     "lint": "eslint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "type": "module",
